Closed Bug 1669393 Opened 5 years ago Closed 5 years ago

New wpt failures in /css/css-multicol/multicol-fill-balance-004.html (with writing-mode:vertical-rl)

Categories

(Core :: Layout: Columns, defect, P3)

defect

Tracking

()

RESOLVED FIXED
84 Branch
Tracking Status
firefox84 --- fixed

People

(Reporter: wpt-sync, Assigned: TYLin)

References

Details

(Keywords: testcase, Whiteboard: [wpt])

Attachments

(1 file)

Syncing wpt PR 25993 found new untriaged test failures in CI

Tests Affected

Firefox-only failures

/css/css-multicol/multicol-fill-balance-004.html: FAIL

CI Results

Gecko CI (Treeherder)
GitHub PR Head

Notes

These updates will be on mozilla-central once bug 1669315 lands.

Note: this bug is for tracking fixing the issues and is not
owned by the wpt sync bot.

This bug is linked to the relevant tests by an annotation in
https://github.com/web-platform-tests/wpt-metadata. These annotations
can be edited using the wpt interop dashboard
https://jgraham.github.io/wptdash/

If this bug is split into multiple bugs, please also update the
annotations, otherwise we are unable to track which wpt issues are
already triaged. Resolving as duplicate or closing this issue should
be cause the bot to automatically update or remove the annotation.

TY, do you want to check this new test to see if it makes sense?

Flags: needinfo?(aethanyc)
Priority: -- → P3

The test makes sense to me at first glance. We even do create a continuation for the green <div>, however its parent (an overflow-container) is positioned at x=1073741823 (which causes the viewport scrollbar).
1073741823 = NS_UNCONSTRAINEDSIZE so this is definitely a bug somewhere...

Severity: -- → S3
Flags: needinfo?(aethanyc)
Keywords: testcase
Summary: New wpt failures in /css/css-multicol/multicol-fill-balance-004.html → New wpt failures in /css/css-multicol/multicol-fill-balance-004.html (with writing-mode:vertical-rl)
Assignee: nobody → aethanyc
Status: NEW → ASSIGNED

This is similar to bug 1088025. If a block frame is vertical-rl, the container size (width in particular), which is used to convert logical to physical coordinate and position overflow container children, is unknown (can be NS_UNCONSTRAINEDSIZE). We'll need to fix up the children's position once we know the block size.

Pushed by aethanyc@gmail.com: https://hg.mozilla.org/integration/autoland/rev/6f170fe5df51 Fix up position of overflow container children in a vertical-rl block once we know the final block size. r=jfkthame
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 84 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: